--- a/views/IdentificacaoUsuario.html
+++ b/views/IdentificacaoUsuario.html
@@ -167,9 +167,9 @@
 
         async function processRFIDIdentificationUser(event) {
             if (event.key === 'Enter') {
-                const rfidId = event.target.value.trim();
+                const userId = event.target.value.trim();
 
-                if (rfidId.length === 0) {
+                if (userId.length === 0) {
                     console.error('RFID não pode ser vazio');
                     return;
                 }
@@ -180,7 +180,7 @@
                         headers: {
                             'Content-Type': 'application/json'
                         },
-                        body: JSON.stringify({ rfidId })
+                        body: JSON.stringify({ userId })
                     });
 
                     if (response.ok) {
