--- a/views/IdentificacaoUsuario.html
+++ b/views/IdentificacaoUsuario.html
@@ -139,7 +139,7 @@
         <input type="text" class="rfid-input" placeholder="Aproxime o cartão bibliotecário do leitor" autofocus>
 
         <div id="info" class="info">
-            <p id="userId"><strong>Nome:</strong></p>
+            <p id="name"><strong>Olá</strong></p>
         </div>
         <div id="countdown" class="countdown"></div>
     </div>
@@ -188,8 +188,10 @@
                         console.log('Dados recebidos:', dataUser);
 
                         if (dataUser.userId) {
+                            localStorage.setItem('name', dataUser.name);
                             localStorage.setItem('userId', dataUser.userId);
-                            document.getElementById('userId').innerHTML = `<strong>Nome:</strong> ${dataUser.userId}`;
+
+                            document.getElementById('name').innerHTML = `<strong>Olá, </strong> ${dataUser.name} 👋`;
                             document.getElementById('info').style.display = 'block';
                             startCountdown('/IdentificacaoLivro');
                         } else {
