--- a/views/CadastroLivros.html
+++ b/views/CadastroLivros.html
@@ -244,6 +244,8 @@
         <div>
             <button onclick="window.location.href='/'">Empréstimo/Devolução</button>
             <button onclick="window.location.href='/CadastroUsuario'">Cadastro Usuários</button>
+            
+            <button onclick="window.location.href='/EdicaoLivro'">EdicaoLivro</button>
             <button onclick="window.location.href='/Contato'">Sobre</button>
         </div>
     </div>
