--- a/views/Agradecimento.html
+++ b/views/Agradecimento.html
@@ -112,8 +112,8 @@
 
     <div class="container">
         <h2>Obrigado pela Visita!</h2>
-        <div class="message">//nome
-            <p>🎉 Uau! Muito obrigado por visitar nossa biblioteca! Esperamos que você tenha encontrado um livro incrível para mergulhar.</p>
+        <div class="message">
+            <p>🎉 Muito obrigado por visitar nossa biblioteca! Esperamos que você tenha encontrado um livro incrível para mergulhar.</p>
             
         </div>
         <div id="countdown" class="countdown">Redirecionando em 10 segundos...</div>
