--- a/views/CadastroLivros.html
+++ b/views/CadastroLivros.html
@@ -27,6 +27,7 @@
             align-items: center;
             padding: 10px 20px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            z-index: 1;
         }
 
         .navbar img {
