--- a/views/CadastroUsuario.html
+++ b/views/CadastroUsuario.html
@@ -26,6 +26,8 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px 20px;
+            z-index: 1;
+            overflow: visible;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
         
